tests/sema/fail/v19_fail_i32_removed.ep
# COMPILE_FAIL: unknown type i32

fun main(): void {
    let x: i32 = 0
}
